# Neurostate

./: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
neurobench/src-tauri/: Cargo.toml  tauri.conf.json
neurobench/src-tauri/src/: build.rs  cloud.rs  docs.rs  git.rs  lib.rs  main.rs  memory.rs  performance.rs  pins.rs  power.rs  profiler.rs  qemu.rs  registers.rs  serial.rs  snippets.rs  templates.rs  tests.rs  validation.rs
neurobench/src-tauri/src/agents/: agent.rs  code_agent.rs  context.rs  debug_agent.rs  diff_engine.rs  docs_agent.rs  fsm_agent.rs  hardware_agent.rs  mod.rs  orchestrator.rs  tests.rs  tools.rs  typed_tools.rs
neurobench/src-tauri/src/ai/: gemini.rs  mod.rs  providers.rs  service.rs
neurobench/src-tauri/src/commands/: codegen.rs  fsm.rs  hardware.rs  mod.rs  project.rs
neurobench/src-tauri/src/core/: engine.rs  graph.rs  mod.rs  types.rs
neurobench/src-tauri/src/drivers/: analog.rs  can.rs  clock.rs  export.rs  generator.rs  gpio.rs  i2c.rs  interrupts.rs  mod.rs  modbus.rs  pins.rs  rtos.rs  spi.rs  templates.rs  uart.rs
neurobench/src-tauri/src/drivers/dsp/: buffer.rs  fft.rs  filters.rs  mod.rs  pid.rs
neurobench/src-tauri/src/drivers/mcu/: esp32.rs  mod.rs  nordic.rs  nxp.rs  rp2040.rs  stm32.rs
neurobench/src-tauri/src/drivers/rtos_gen/: freertos.rs  mod.rs  (+1 more)
neurobench/src-tauri/src/hal/: mod.rs  simulator.rs
neurobench/src-tauri/src/jobs/: flash.rs  mod.rs  probe_rs_backend.rs  rtt.rs
neurobench/src-tauri/src/mcu/: mod.rs  registry.rs
neurobench/src-tauri/src/terminal/: autocomplete.rs  commands.rs  executor.rs  mod.rs  parser.rs  themes.rs
neurobench/src-tauri/src/toolchain/: arm_gcc.rs  discovery.rs  mod.rs  output_parser.rs  probe.rs  streaming_build.rs
(+80 files in other folders)
